// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-alarm-chip Renders \`c-alarm-chip\` with custom props 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      stealthy
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            3
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with default props 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      ok
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
        >
          <span>
            0
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: ack 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            ack20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: ackRemove 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            ackremove20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: assocTicket 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            assocticket20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: autoInstructionAlreadyRunning 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            autoinstructionalreadyrunning20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: autoInstructionComplete 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            autoinstructioncomplete20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: autoInstructionFail 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            autoinstructionfail20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: autoInstructionStart 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            autoinstructionstart20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: cancel 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            cancel20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: changeState 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            changestate20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: check 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            check20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: comment 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            comment20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: createManualMetaAlarm 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            createManualMetaAlarm20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: declareTicket 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            declareticket20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: declareTicketFail 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            declareticketfail20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: delete 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            delete20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: executeInstruction 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            executeInstruction20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: fastAck 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            fastAck20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: group 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            group20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionAbort 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            instructionabort20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionComplete 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            instructioncomplete20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionFail 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            instructionfail20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionJobAbort 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            instructionjobabort20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionJobComplete 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            instructionjobcomplete20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionJobFail 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            instructionjobfail20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionJobStart 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            instructionjobstart20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionPause 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            instructionpause20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionResume 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            instructionresume20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionStart 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            instructionstart20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: invalidate 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            invalidate20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: junitTestCaseUpdate 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            junittestcaseupdate20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: junitTestSuiteUpdate 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            junittestsuiteupdate20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: metaalarmattach 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            metaalarmattach20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: pause 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            pause20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: pbehaviorAdd 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            pbehaviorAdd20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: pbehaviorList 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            pbehaviorList20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: pbhenter 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            pbhenter20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: pbhleave 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            pbhleave20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: play 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            play20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: removeAlarmsFromAutoMetaAlarm 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            removeAlarmsFromAutoMetaAlarm20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: removeAlarmsFromManualMetaAlarm 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            removeAlarmsFromManualMetaAlarm20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: snooze 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            snooze20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: statedec 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            statedec20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: stateinc 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            stateinc20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: statusdec 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            statusdec20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: statusinc 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            statusinc20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: uncancel 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            uncancel20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: unsooze 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            unsooze20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: validate 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            validate20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: webhookComplete 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            webhookcomplete20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: webhookFail 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            webhookfail20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: webhookStart 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            webhookstart20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with status: cancelled 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      cancelled
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            14
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with status: closed 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      closed
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            10
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with status: flapping 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      flapping
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            13
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with status: noEvents 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      no events
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            15
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with status: ongoing 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      ongoing
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            11
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with status: stealthy 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      stealthy
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span>
            12
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;
